--- a/_includes/i-sect-end-start.html
+++ b/_includes/i-sect-end-start.html
@@ -2,6 +2,6 @@
 <!-- prev section end -->
 </div></div>
 <!-- new section start -->
-<div class="uk-section {{ include.sectclass |default: 'uk-section-default' }}">
+<div class="uk-section {{ include.sectclass |default: 'uk-section-default' }} uk-section-small">
 <div class="uk-container" markdown="1">
 {:/}
