--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -15,7 +15,7 @@
     <!-- uni layout -->
     {% include menu.html %}   
 
-    <div class="uk-section uk-section-default">
+    <div class="uk-section uk-section-default uk-section-small">
         <div class="uk-container"> 
             {% comment %}
             <img src="/img/toplogo/{{ page.sortid }}.jpg" class="uk-align-left">
