--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -10,6 +10,15 @@
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
     {% seo title=false %}
+    <link rel="apple-touch-icon" sizes="180x180" href="/ico/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/ico/favicon-16x16.png">
+    <link rel="manifest" href="/ico/site.webmanifest">
+    <link rel="mask-icon" href="/ico/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="apple-mobile-web-app-title" content="Высотноеобследование.рф">
+    <meta name="application-name" content="Высотноеобследование.рф">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <!-- uni layout -->
