--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
     {% seo title=false %}
-    <link rel="apple-touch-icon" sizes="180x180" href="/ico/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/ico/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/ico/favicon-16x16.png">
     <link rel="manifest" href="/ico/site.webmanifest">
