--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -3,11 +3,12 @@
 <html>
 <head>
     <link rel="stylesheet" href="/css/uikit.min.css?{{site.time | date: '%s' }}" />
-    <link rel="stylesheet" href="/css/add.css?{{site.time | date: '%s' }}" />
+    <link rel="stylesheet" href="/css/add.css?{{site.time | date: '%s' }}" />    
     <script src="/js/uikit.min.js"></script>
     <script src="/js/uikit-icons.min.js"></script>
     <script src="/js/textFit.min.js"></script>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ page.title }}</title>
     {% seo title=false %}
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -19,6 +20,10 @@
     <meta name="application-name" content="Высотноеобследование.рф">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+
+    <link rel="stylesheet" href="/css/sw-0.css" />
+    <script src="/js/css_switch.js"></script>
+
 </head>
 <body>
     <!-- uni layout -->
