--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -90,7 +90,7 @@
             </form>
         </div>
     </div>
-    <script type="text/javascript">
+    <script defer>
         var form = document.getElementById("contact-form");
     
         form.onsubmit = function(e) {
