--- a/_includes/search-form.html
+++ b/_includes/search-form.html
@@ -1,7 +1,12 @@
 <div id="search-modal" class="uk-modal-full" uk-modal>
     <div class="uk-modal-dialog">
-        <button  class="uk-modal-close-full uk-close-large" type="button" uk-close></button>
-        <div id="global-search-results-container">
+        <button class="uk-modal-close-full uk-close-large" type="button" uk-close></button>
+
+        <div class="uk-padding-small uk-search-large" uk-height-viewport>
+            <input class="uk-search-input" id="global-search-input" type="search" placeholder="Search..." autofocus="autofocus">
+
+            <div id="global-search-results-container">
+            </div>
 
         </div>
     </div>
