--- a/_includes/search-form.html
+++ b/_includes/search-form.html
@@ -3,7 +3,7 @@
         <button class="uk-modal-close-full uk-close-large" type="button" uk-close></button>
 
         <div class="uk-padding-small uk-search-large" uk-height-viewport>
-            <input class="uk-search-input" id="global-search-input" type="search" placeholder="Search..." autofocus="autofocus">
+            <input class="uk-search-input" id="global-search-input" type="search" placeholder="Search...">
 
             <div id="global-search-results-container">
             </div>
