--- a/_includes/search-form.html
+++ b/_includes/search-form.html
@@ -5,9 +5,7 @@
         <div class="uk-padding-small uk-search-large" uk-height-viewport>
             <input class="uk-search-input" id="global-search-input" type="search" placeholder="Search...">
 
-            <div id="global-search-results-container">
-            </div>
-
+            <div id="global-search-results-container"></div>
         </div>
     </div>
 </div>
