--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -30,9 +30,9 @@
             <img src="/img/toplogo/{{ page.sortid }}.jpg" class="uk-align-left">
             {% endcomment %}               
                 {% if page.cat == 0 %}               
-                    <h1 class="uk-article-title">{{ site.title }}</h1>
+                    <h1 class="uk-article-title uk-heading-divider">{{ site.title }}</h1>
                 {% else %}
-                    <h1 class="uk-article-title">{{ page.title }}</h1>
+                    <h1 class="uk-article-title uk-heading-divider">{{ page.title }}</h1>
                 {% endif %}
                 
                 {{ content }}
