--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -3,7 +3,7 @@ layout: uni
 ---
 
 <!-- portfolio layout -->
-<img src="{{ page.cover }}">
+<img data-src="{{ page.cover }}">
 <h3>{{ page.caption }}</h3>
 <p>{{ page.description }}</p>
 
