--- a/_includes/el-img.html
+++ b/_includes/el-img.html
@@ -1,1 +1,6 @@
-<img data-src="" alt="" class="" uk-img>
+{%- assign path="{{ "/img/" append: include.name | append: ".jpg" }}" -%}
+<img data-src="" alt="" 
+    class="
+        {%-unless include.noshadow -%} uk-box-shadow-medium {%- endunless -%}
+        " 
+        uk-img>
