--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -2,7 +2,7 @@
     <nav class="uk-navbar-container" uk-navbar>
         <div class="uk-navbar-left">
                 <div class="uk-navbar-item">
-                    <img data-src="/img/eagle.png" width="100">
+                    <img data-src="/img/eagle.png" width="100" uk-img>
                 </div>
         </div>
         <div class="uk-navbar-center nav-overlay">
