--- a/_includes/el-slider.html
+++ b/_includes/el-slider.html
@@ -7,7 +7,7 @@
             {% for i in site.static_files %}
                 {% if i.path contains galpath %}
                     <li>
-                        <img data-src="/{{ galpath }}/{{ i.name }}" alt="">
+                        <img data-src="/{{ galpath }}/{{ i.name }}" alt="" uk-img>
                     </li>
                 {% endif %}
             {% endfor %}
