--- a/_includes/el-img.html
+++ b/_includes/el-img.html
@@ -1,4 +1,5 @@
-{%- assign path="{{ "/img/" append: include.name | append: ".jpg" }}" -%}
+{%- capture ext -%}{%- if include.ext -%}{{ include.ext }}{%- else -%}.jpg{%- endif -%}{%- endcapture -%}
+{%- assign path="{{ "/img/" append: include.name | append: ext }}" -%}
 <img data-src="" alt="" 
     class="
         {%-unless include.noshadow -%} uk-box-shadow-medium {%- endunless -%}
