--- a/_includes/el-img.html
+++ b/_includes/el-img.html
@@ -1,7 +1,22 @@
-{%- capture ext -%}{%- if include.ext -%}{{ include.ext }}{%- else -%}.jpg{%- endif -%}{%- endcapture -%}
-{%- assign path="{{ "/img/" append: include.name | append: ext }}" -%}
-<img data-src="" alt="" 
+{%- assign path="{{ "/img/" append: include.name }}" -%}
+
+{%- for file in site.static_files -%}
+    {%- if file.path == path -%}
+        {%- assign exists=1 -%}
+        {% break %}
+    {%- endif -%}
+{%- endfor -%}
+{%- if exists -%}
+    {%- assign src=path -%}
+{%- else -%}
+    {%- assign src="https://dummyimage.com/400x300/00d0db/000000.png&text=file+not+found" -%}
+{%- endif -%}
+
+
+<img data-src="{{src}}" alt="" 
     class="
         {%-unless include.noshadow -%} uk-box-shadow-medium {%- endunless -%}
+        {%- if include.align -%}uk-align-{{ include.align | append:' ' }} {%- endif -%}
+        {%- if include.width -%}uk-width-{{ include.width | split '/'' | join '-' | append:' ' }} {%- endif -%}
         " 
         uk-img>
