--- a/_includes/el-img.html
+++ b/_includes/el-img.html
@@ -6,6 +6,8 @@
         {% break %}
     {%- endif -%}
 {%- endfor -%}
+{{ path }} - {{ exists }}
+{% comment %}
 {%- if exists -%}
     {%- assign src=path -%}
 {%- else -%}
@@ -15,8 +17,9 @@
 
 <img data-src="{{src}}" alt="" 
     class="
-        {%-unless include.noshadow -%} uk-box-shadow-medium {%- endunless -%}
+        {%- unless include.noshadow -%} uk-box-shadow-medium {%- endunless -%}
         {%- if include.align -%}uk-align-{{ include.align | append:' ' }} {%- endif -%}
         {%- if include.width -%}uk-width-{{ include.width | split '/'' | join '-' | append:' ' }} {%- endif -%}
         " 
         uk-img>
+{% endcomment %}
