--- a/_includes/el-img.html
+++ b/_includes/el-img.html
@@ -16,12 +16,13 @@
 {{ path }} - {{ exists }} - {{ src }}
 
 
-<img data-src="{{src}}" alt="" 
+<img data-src="{{src}}" alt="">
+{% comment %} 
     class="
         {%- unless include.noshadow -%} uk-box-shadow-medium {%- endunless -%}
         {%- if include.align -%}uk-align-{{ include.align | append:' ' }} {%- endif -%}
         {%- if include.width -%}uk-width-{{ include.width | split '/'' | join '-' | append:' ' }} {%- endif -%}
         " 
         uk-img>
-{% comment %}
+
 {% endcomment %}
