--- a/_includes/el-img.html
+++ b/_includes/el-img.html
@@ -15,11 +15,11 @@
 {%- endif -%}
 {{ path }} - {{ exists }} - {{ src }}
 
-
 <img data-src="{{src}}" alt="">
-{% comment %} 
     class="
         {%- unless include.noshadow -%} uk-box-shadow-medium {%- endunless -%}
+        " uk-img>
+{% comment %} 
         {%- if include.align -%}uk-align-{{ include.align | append:' ' }} {%- endif -%}
         {%- if include.width -%}uk-width-{{ include.width | split '/'' | join '-' | append:' ' }} {%- endif -%}
         " 
