--- a/_includes/el-img.html
+++ b/_includes/el-img.html
@@ -15,7 +15,7 @@
 {%- endif -%}
 {{ path }} - {{ exists }} - {{ src }}
 
-<img data-src="{{src}}" alt="">
+<img data-src="{{src}}" alt=""
     class="
         {%- unless include.noshadow -%} uk-box-shadow-medium {%- endunless -%}
         " uk-img>
