--- a/_includes/el-img.html
+++ b/_includes/el-img.html
@@ -15,7 +15,7 @@
 {%- endif -%}
 {%- capture class -%}
     {%- unless include.noshadow -%}uk-box-shadow-medium,{%- endunless -%}
-    {%- if include.align -%}uk-align-{{ include.align | append:',' }}{%- endif -%}  
+    {%- if include.align -%}uk-align-{{ include.align | append:'' }}{%- endif -%}  
 {%- endcapture -%}
     {{src}} - {{class}}
     <img data-src="{{src}}" alt="" class="{{ class | split ',' | join ' '}}" uk-img>
