--- a/_includes/el-img.html
+++ b/_includes/el-img.html
@@ -17,7 +17,7 @@
     {%- unless include.noshadow -%}uk-box-shadow-medium,{%- endunless -%}
     {%- if include.align -%}uk-align-{{ include.align | append:'' }}{%- endif -%}  
 {%- endcapture -%}
-{%- assign classlist=class |split ',' -%}
+{%- assign classlist=class | split ',' | join ' ' -%}
     {{src}} - {{class}}
     <img data-src="{{src}}" alt="" class="{{ classlist }}" uk-img>
 {%- comment -%}
