--- a/_includes/el-img.html
+++ b/_includes/el-img.html
@@ -17,9 +17,9 @@
     {%- unless include.noshadow -%}uk-box-shadow-medium,{%- endunless -%}
     {%- if include.align -%}uk-align-{{ include.align | append:'' }}{%- endif -%}  
 {%- endcapture -%}
-{%- assign classlist=class | split "," -%}
+{%- assign classlist= -%}
     {{src}} - {{class}}
-    <img data-src="{{src}}" alt="" class="a" uk-img>
+    <img data-src="{{src}}" alt="" class="{{class | split: ',' | join: ' ' }}" uk-img>
 {%- comment -%}
 
 
