--- a/_includes/el-img.html
+++ b/_includes/el-img.html
@@ -15,7 +15,8 @@
 {%- endif -%}
 {%- capture class -%}
     {%- unless include.noshadow -%}uk-box-shadow-medium,{%- endunless -%}
-    {%- if include.align -%}uk-align-{{ include.align | append:'' }}{%- endif -%}  
+    {%- if include.align -%}uk-align-{{ include.align }},{%- endif -%}
+    {%- if include.width -%}uk-width-{{ include.width | split: '/'' | join: '-' }}{%- endif -%}  
 {%- endcapture -%}
     {{src}} - {{class}}
     <img data-src="{{src}}" alt="" class="{{class | split: ',' | join: ' ' }}" uk-img>
@@ -23,6 +24,6 @@
 
 
 
-        {%- if include.width -%}uk-width-{{ include.width | split '/'' | join '-' | append:' ' }} {%- endif -%}
+        
 {%- endcomment -%}
 .
