--- a/_includes/el-img.html
+++ b/_includes/el-img.html
@@ -1,13 +1,10 @@
-.{%- capture path -%}{{ "/img/" | append: include.name }}{%- endcapture -%}
-
+{%- capture path -%}{{ "/img/" | append: include.name }}{%- endcapture -%}
 {%- for file in site.static_files -%}
     {%- if file.path == path -%}
         {%- assign exists=1 -%}
         {% break %}
     {%- endif -%}
 {%- endfor -%}
-
-
 {%- if exists -%}
     {%- assign src=path -%}
 {%- else -%}
@@ -16,14 +13,9 @@
 {%- capture class -%}
     {%- unless include.noshadow -%}uk-box-shadow-medium,{%- endunless -%}
     {%- if include.align -%}uk-align-{{ include.align }},{%- endif -%}
-    {%- if include.width -%}uk-width-{{ include.width | split: '/'' | join: '-' }}{%- endif -%}  
+    {%- if include.width -%}uk-width-{{ include.width | split: '/' | join: '-' }}{%- endif -%}  
 {%- endcapture -%}
     {{src}} - {{class}}
     <img data-src="{{src}}" alt="" class="{{class | split: ',' | join: ' ' }}" uk-img>
-{%- comment -%}
-
-
-
-        
+{%- comment -%}        
 {%- endcomment -%}
-.
