--- a/_includes/el-img.html
+++ b/_includes/el-img.html
@@ -11,7 +11,7 @@
     {%- assign src="https://dummyimage.com/400x300/00d0db/000000.png&text=file+not+found" -%}
 {%- endif -%}
 {%- capture class -%}
-    {%- unless include.noshadow -%}uk-box-shadow-medium,{%- endunless -%}
+    {%- unless include.noshadow -%}uk-box-shadow-large,{%- endunless -%}
     {%- if include.align -%}uk-align-{{ include.align }},{%- endif -%}
     {%- if include.width -%}uk-width-{{ include.width | split: '/' | join: '-' }}{%- endif -%}  
 {%- endcapture -%}
