--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -5,7 +5,10 @@
                     <img data-src="/img/eagle.png" width="100" uk-img>
                 </div>
         </div>
-        <div class="uk-navbar-center nav-overlay">
+        <div class="uk-navbar-center nav-overlay uk-hidden@l">
+                <a class="uk-navbar-toggle" uk-navbar-toggle-icon href="#offcanvas-nav"></a>
+        </div>
+        <div class="uk-navbar-center nav-overlay uk-visible@l">
             <ul class="uk-navbar-nav">
                 {%- assign sort_pages = site.pages | sort: "sortid" -%}
                 {%- for p in sort_pages -%}
@@ -101,6 +104,64 @@
             </ul>
         </div>
     {% endif %}
+</div>
+
+<div id="offcanvas-nav" uk-offcanvas="overlay: true">
+    <div class="uk-offcanvas-bar uk-flex uk-flex-column">
+        <ul class="uk-nav uk-nav-primary uk-nav-center uk-margin-auto-vertical">
+        </ul>
+        {%- assign sort_pages = site.pages | sort: "sortid" -%}
+        {%- for p in sort_pages -%}
+        {%- capture upnd_title -%}
+        {% if p.cat == 6.0 %}
+        {{ p.title }} {{ site.data.var.phones[0] }}
+        {% else %}
+        {{ p.title }}
+        {% endif %}
+        {%- endcapture -%}
+        {%- assign menu_title = upnd_title | split: " " -%}
+        {%- if p.main -%}
+
+        {% if p.url == page.url %}
+        <li class="uk-active">
+            {%- else -%}
+        <li>
+            {%- endif -%}
+
+            <a href="{{ p.url }}" class="uk-button-text">
+                <div class="uk-text-center">
+                    {%- for line in menu_title -%}
+                    {%- if forloop.first == true -%}
+                    {{ line }}
+                    {%- else -%}
+                    <div class="uk-navbar-subtitle">{{ line }}</div>
+                    {%- endif -%}
+                    {%- endfor -%}
+                </div>
+                {%- if p.submenu and p.cat == page.cat -%}
+                <span uk-icon="chevron-down"></span>
+                {%- elsif p.submenu -%}
+                <span uk-icon="chevron-right"></span>
+                {%- endif -%}
+
+            </a>
+            {% if p.submenu and p.cat != page.cat %}
+            <div class="uk-navbar-dropdown">
+                <ul class="uk-nav uk-navbar-dropdown-nav">
+                    {%- for s in sort_pages -%}
+                    {% if s.main != true and s.cat == p.cat %}
+                    <li>
+                        <a href="{{ s.url}}" class="uk-button-text">{{ s.title }}</a>
+                    </li>
+                    {% endif %}
+                    {%- endfor -%}
+                </ul>
+            </div>
+            {% endif %}
+        </li>
+        {%- endif -%}
+        {%- endfor -%}
+    </div>
 </div>
 
 
