--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -5,8 +5,8 @@
                     <img data-src="/img/eagle.png" width="100" uk-img>
                 </div>
         </div>
-        <div class="uk-navbar-center nav-overlay uk-hidden@l">
-                <a class="uk-navbar-toggle" uk-navbar-toggle-icon href="#offcanvas-nav"></a>
+        <div class="uk-navbar-left nav-overlay uk-hidden@l">
+                <a class="uk-navbar-toggle" uk-navbar-toggle-icon href="#offcanvas-nav" uk-toggle></a>
         </div>
         <div class="uk-navbar-center nav-overlay uk-visible@l">
             <ul class="uk-navbar-nav">
