--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,6 +1,6 @@
 <div class="" uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
     <nav class="uk-navbar-container" uk-navbar>
-        <div class="uk-navbar-left">
+        <div class="uk-navbar-left" uk-toggle="target: #offcanvas-nav;" uk-toggle>
                 <div class="uk-navbar-item">
                     <img data-src="/img/eagle.png" width="100" uk-img>
                 </div>
