--- a/css/add.css
+++ b/css/add.css
@@ -20,3 +20,8 @@ p>code {
  em {
   color: #FF7C2F;
 }
+
+nav.uk-navbar-container li .uk-text-center{
+  font-size: large;
+    font-weight: 600;
+}
