--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -18,7 +18,8 @@
     <meta name="apple-mobile-web-app-title" content="Высотноеобследование.рф">
     <meta name="application-name" content="Высотноеобследование.рф">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">    
+    <meta name="theme-color" content="#ffffff">
+    {%- include google-gtag.html -%}    
 </head>
 <body>
     <!-- uni layout -->
