--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -19,7 +19,8 @@
     <meta name="application-name" content="Высотноеобследование.рф">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    {%- include google-gtag.html -%}    
+    {%- include google-gtag.html -%}
+    {%- include yandex-metr.html -%}   
 </head>
 <body>
     <!-- uni layout -->
