--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
     <link rel="stylesheet" href="/css/uikit.min.css" />
     <link rel="stylesheet" href="/css/add.css?{{site.time | date: '%s' }}" />    
