--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -113,9 +113,7 @@
         {%- for p in sort_pages -%}
         {%- capture upnd_title -%}
         {%- if p.cat == 6.0 -%}
-        {{ p.title }} {{ site.data.var.phones[0] }}
-        {%- elsif page.cat == 0 -%}
-        <span uk-icon="home"></span>
+        {{ p.title }} {{ site.data.var.phones[0] }}        
         {%- else -%}
         {{ p.title }}
         {%- endif -%}
@@ -130,6 +128,9 @@
             {%- endif -%}
 
             <a href="{{ p.url }}" class="uk-button-text">
+                {%- if page.cat == 0 -%}
+                    <span uk-icon="home"></span>
+                {%-else -%}
                 <div class="uk-text-center">
                     {%- for line in menu_title -%}
                     {%- if forloop.first == true -%}
@@ -138,7 +139,8 @@
                     <div class="uk-navbar-subtitle">{{ line }}</div>
                     {%- endif -%}
                     {%- endfor -%}
-                </div>              
+                </div>
+                {%- endif -%}              
 
             </a>            
         </li>
