--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -128,7 +128,7 @@
             {%- endif -%}
 
             <a href="{{ p.url }}" class="uk-button-text">
-                {%- if page.cat == 0 -%}
+                {%- if p.cat == 0 -%}
                     <span uk-icon="home"></span>
                 {%- else -%}
                 <div class="uk-text-center">
