--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,9 +1,9 @@
 <div class="" uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
     <nav class="uk-navbar-container" uk-navbar>
         <div class="uk-navbar-left" uk-toggle="target: #offcanvas-nav;" uk-toggle>
-                <div class="uk-navbar-item">
+                <a class="uk-navbar-item" href="#offcanvas-nav" uk-toggle>
                     <img data-src="/img/eagle.png" width="100" uk-img>
-                </div>
+                </a>
         </div>
         <div class="uk-navbar-left nav-overlay uk-hidden@l">
                 <a class="uk-navbar-toggle" uk-navbar-toggle-icon href="#offcanvas-nav" uk-toggle></a>
