--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -25,7 +25,7 @@
                         {% if p.url == page.url %}
                             <li class="uk-active" data-priority="{{ site.data.var.menu_priority[p.cat] }}">  
                         {%- else -%}
-                            <li>  
+                            <li data-priority="{{ site.data.var.menu_priority[p.cat] }}">  
                         {%- endif -%}
                                                   
                             <a href="{{ p.url }}" class="uk-button-text">
