--- a/_layouts/v2.html
+++ b/_layouts/v2.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-</head>
-<body>
-        {{ content }}    
-</body>
-</html>
+---
+layout: uni
+---
+<!-- portfolio layout -->
+
+{{ content }}    
