--- a/css/add.css
+++ b/css/add.css
@@ -21,3 +21,7 @@ em {
   color: #FF7C2F;
 }
 
+.uk-alert-primary,
+body > div.uk-sticky.uk-sticky-fixed > nav {
+  box-shadow: 0 14px 25px rgba(0,0,0,.16);
+}
