--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -11,6 +11,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/ico/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/ico/favicon-16x16.png">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" >
     <link rel="manifest" href="/ico/site.webmanifest">
     <link rel="mask-icon" href="/ico/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="apple-mobile-web-app-title" content="Высотноеобследование.рф">
@@ -51,7 +52,9 @@
     <script defer src=/js/dofit.js></script>    
     <script async src="/js/search.js"></script>
     <script async src="/js/css_switch.js"></script>
-    {%- include google-gtag.html -%}
-    {%- include yandex-metr.html -%}     
+    {%- if page.sitemap != false -%}
+        {%- include google-gtag.html -%}
+        {%- include yandex-metr.html -%}
+    {%- endif -%}     
 </body>
 </html>
