--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,6 +34,6 @@
             </div>
         </div>
     </div>
-    <div class="uk-text-muted uk-text-right">{{ site.time }}{%- if page.sitemap != false -%}🔍{%- elseif -%}👻{%- endif -%}
+    <div class="uk-text-muted uk-text-right">{{ site.time }}{%- if page.sitemap != false -%}🔍{%- else -%}👻{%- endif -%}
     </div>
 </div>
