--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -55,6 +55,12 @@
     {%- if page.sitemap != false -%}
         {%- include google-gtag.html -%}
         {%- include yandex-metr.html -%}
-    {%- endif -%}     
+    {%- endif -%}
+    <script type="text/plain">
+        {% for v in page %}
+            {% if v[0] == "content" or v[0] == "excerpt" %}{% continue %}{% endif %}
+            page.{{ v[0] }} == {{ v[1] }}                   
+        {% endfor %}
+    </script>     
 </body>
 </html>
