--- a/_includes/el-anim-contact-button.html
+++ b/_includes/el-anim-contact-button.html
@@ -1,1 +1,1 @@
-<div uk-scrollspy="cls:uk-animation-shake; target:#fixed-contact-button-div>button;repeat:true;"></div>
+<div uk-scrollspy="cls:uk-animation-shake; target:#fixed-contact-button-div>button;delay: 100;repeat:true;"></div>
