--- a/_includes/el-fixed-contact-button.html
+++ b/_includes/el-fixed-contact-button.html
@@ -1,6 +1,6 @@
 <div id="fixed-contact-button-div" class="uk-position-small uk-position-bottom-right uk-position-fixed">
     <button class="uk-button uk-button-danger uk-button-large uk-button-large uk-box-shadow-large" type="button" uk-toggle="target: #modal-contact-form">
         <span uk-icon="{{ include.icon | default:'receiver' }}"></span>
-        {{ include.text | default:'Заказать обратный звонок' }}
+        {{- include.text | default:'Заказать обратный звонок' -}}
     </button>
 </div>
