меню скрывается при ширине < 960px

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -8,10 +8,10 @@
                 </a>
         </div>
     -->
-        <div class="uk-navbar-left nav-overlay uk-hidden@l">
+        <div class="uk-navbar-left nav-overlay uk-hidden@m">
                 <a class="uk-navbar-toggle" uk-navbar-toggle-icon href="#offcanvas-nav" uk-toggle></a>
         </div>
-        <div class="uk-navbar-center nav-overlay uk-visible@l">
+        <div class="uk-navbar-center nav-overlay uk-visible@m">
             <ul class="uk-navbar-nav">
                 {% if page.collection == "v2" %}
                     {%- assign sort_pages = site.v2 | sort: "sortid" -%}
