--- a/_layouts/minimal.html
+++ b/_layouts/minimal.html
@@ -8,7 +8,7 @@
     <title>{{page.title}}</title>
     <style>
         td span {
-            cursor: pointer;
+            cursor: default;
         }
     </style>
 </head>
