--- a/_includes/el-horizcard.html
+++ b/_includes/el-horizcard.html
@@ -1,5 +1,5 @@
-<div class="uk-card uk-card-default uk-child-width-1-2 uk-grid" uk-grid>
-    <div class="uk-card-media-{{ include.imgside | default:left }} uk-cover-container uk-background-cover" data-src="/img/{{ include.img }}" uk-img></div>
+<div class="uk-card uk-margin uk-card-default uk-child-width-1-2 uk-grid" uk-grid>
+    <div class="{% if %} uk-flex-last uk-card-media-right {% else %}uk-card-media-left{% endif %} uk-cover-container uk-background-cover" data-src="/img/{{ include.img }}" uk-img></div>
     <div>
         <div class="uk-card-body">
             {{ include.inner | markdownify}}
