--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -55,6 +55,7 @@
     {%- if page.sitemap != false -%}
         {%- include google-gtag.html -%}
         {%- include yandex-metr.html -%}
+        {%- include facebook-pixel.html -%}
     {%- endif -%}
     {% if site.debugpagevars %}
         {% capture newLine %}
