--- a/_layouts/uni.html
+++ b/_layouts/uni.html
@@ -56,6 +56,7 @@
         {%- include google-gtag.html -%}
         {%- include yandex-metr.html -%}
         {%- include facebook-pixel.html -%}
+        {%- include vk-pixel.html -%}
     {%- endif -%}
     {% if site.debugpagevars %}
         {% capture newLine %}
