--- a/_includes/el-horizcard.html
+++ b/_includes/el-horizcard.html
@@ -1,5 +1,5 @@
 <div class="uk-card uk-card-default uk-child-width-1-2 uk-grid" uk-grid>
-    <div class="{% if include.imgonright %} uk-flex-last uk-card-media-right {% else %} uk-card-media-left {% endif %} uk-cover-container uk-background-cover" data-src="/img/{{ include.img }}" uk-img></div>
+    <div class="{% if include.imgonright %} uk-flex-last uk-card-media-right {% else %} uk-card-media-left {% endif %} uk-cover-container uk-background-cover" {% if include.img %} data-src="/img/{{ include.img }}" uk-img {% endif %}></div>
     <div>
         <div class="uk-card-body">
             {{ include.inner | markdownify}}
