--- a/_includes/el-horizcard.html
+++ b/_includes/el-horizcard.html
@@ -1,5 +1,5 @@
-<div class="uk-card uk-card-default uk-child-width-1-2@s uk-grid uk-grid-collapse" uk-grid>
-    <div class="{% if include.imgonright %} uk-flex-last@s uk-card-media-right {% else %} uk-card-media-left {% endif %} uk-cover-container uk-background-cover" {% if include.img %} data-src="/img/{{ include.img }}" uk-img {% endif %}>
+<div class="uk-card uk-card-default uk-child-width-1-2@m uk-grid uk-grid-collapse" uk-grid>
+    <div class="{% if include.imgonright %} uk-flex-last@m uk-card-media-right {% else %} uk-card-media-left {% endif %} uk-cover-container uk-background-cover" {% if include.img %} data-src="/img/{{ include.img }}" uk-img {% endif %}>
         <canvas></canvas>
     </div>
     <div>
