--- a/_includes/el-grid-cards.html
+++ b/_includes/el-grid-cards.html
@@ -14,7 +14,7 @@
                     {% endif %}
                 {% endcomment %}
 
-                <div class="uk-grid-match uk-grid-small uk-child-width-1-1@s uk-child-width-1-3@m  uk-padding uk-flex-around" uk-grid>
+                <div class="uk-grid-match uk-grid-small uk-child-width-1-1@ uk-child-width-1-3@m  uk-padding uk-flex-around" uk-grid>
             {% endif %}
 
                 {%- if page.sortid == 0 -%}
