--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,7 @@
 ﻿<!-- footer -->
-<div class="uk-section uk-section-default uk-background-cover" style="background-image: url(/img/footer.jpg)">
+<div class="uk-section uk-section-default uk-background-cover" 
+    style="background-image: url(/img/footer.jpg);text-shadow: 0 0 5px white;
+    color: black;font-weight: 500;">
     <div class="uk-container uk-text-emphasis uk-link-text" >
         <div class="uk-grid-divider uk-grid uk-child-width-1-1@s uk-child-width-1-3@m" uk-grid>
             <div class="">  
