--- a/css/sw-1.css
+++ b/css/sw-1.css
@@ -1,12 +1,4 @@
-﻿em{
-  color: #c24700;
-}
-
-.uk-navbar-nav>li>a {
-    font-size: large;
-      font-weight: 600;
-  }
-
+﻿
 .uk-section-muted {
   background: linear-gradient(171deg, rgba(147,185,236,1) 39%, rgba(111,147,195,1) 100%);
 }
